# hexxy32

./: .gitignore  .gitmodules  .luarc.json  .prettierignore  Makefile  README.md  memory.ld  pyproject.toml
arduino/: .clang-format
arduino/rpc/: rpc.ino
lua/: loader.lua
lua/monitor/: startup.lua
lua/types/: focal_port.lua  peripheral.lua
mods/: README.md
notebooks/: usage.csv  usage.ipynb
programs/: branch.s  draw.s  jump.s  load.s  math.s  print.s  shift_left.s  store.s  test.asm  test.s  zero.s
python/hexxy32/cli/: app.py
python/hexxy32/server/: app.py  constants.py
python/hexxy32/utils/: arduino.py
riscof/: .gitignore  config.ini
riscof/hexxy32/: hexxy32_isa.yaml  hexxy32_platform.yaml  riscof_hexxy32.py
riscof/sail_cSim/: riscof_sail_cSim.py
rust/: README.md
rust/arduino/: Cargo.toml  Makefile
rust/arduino/src/: main.rs
rust/bad_apple/: .gitignore  Cargo.toml  Makefile  build.py
rust/bad_apple/src/: main.rs
rust/demo/: Cargo.toml  Makefile
rust/demo/.cargo/: config.toml
rust/demo/src/: main.rs
rust/demo_alloc/: Cargo.toml  Makefile  build.rs  memory.x
rust/demo_alloc/.cargo/: config.toml
rust/demo_alloc/src/: main.rs
rust/demo_no_alloc/: Cargo.toml  Makefile
rust/demo_no_alloc/src/: main.rs
rust/hexxy32/: Cargo.toml  link.x
rust/hexxy32/.cargo/: config.toml
rust/hexxy32/src/: constants.rs  graphics.rs  io.rs  lib.rs  prelude.rs
rust/hexxy32/src/graphics/: cc.rs  hex.rs  mod.rs
scripts/: dump.py
src/: decoders.hexpattern  main.hexpattern
src/computercraft/: arduino.lua
src/computercraft/loader/: loader.hexpattern  loader.lua
src/computercraft/types/: focal_link.lua  iota.lua
src/instructions/: integer_computational.hexpattern
src/launchers/: trinket.hexpattern  wisp.hexpattern
src/macros/: bytes.hexpattern  exceptions.hexpattern  heaps.hexpattern  instructions.hexpattern  memory.hexpattern  registers.hexpattern  traps.hexpattern
src/processor/: bootstrap.hexpattern  decoders.hexpattern  eval.hexpattern  shutdown.hexpattern  startup.hexpattern  syscalls.hexpattern  traps.hexpattern
src/processor/instructions/: control_transfer.hexpattern  integer_computational.hexpattern  load_and_store.hexpattern  memory_ordering.hexpattern  system.hexpattern
src/processor/main/: bootstrap.hexpattern  eval.hexpattern  shutdown.hexpattern  startup.hexpattern
src/types/: hexcasting.hexpattern
